logs/getui.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/getui'...
Compiling './lib/python3.5/site-packages/getui/alias_demo.py'...
***   File "./lib/python3.5/site-packages/getui/alias_demo.py", line 50
    print ret
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/getui/demo.py'...
***   File "./lib/python3.5/site-packages/getui/demo.py", line 84
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/getui/google'...
Listing './lib/python3.5/site-packages/getui/google/protobuf'...
Listing './lib/python3.5/site-packages/getui/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/getui/google/protobuf/internal'...
Compiling './lib/python3.5/site-packages/getui/google/protobuf/internal/python_message.py'...
***   File "./lib/python3.5/site-packages/getui/google/protobuf/internal/python_message.py", line 801
    except struct.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/getui/google/protobuf/text_format.py'...
***   File "./lib/python3.5/site-packages/getui/google/protobuf/text_format.py", line 406
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/getui/igetui'...
Listing './lib/python3.5/site-packages/getui/igetui/template'...
Listing './lib/python3.5/site-packages/getui/igetui/utils'...
Compiling './lib/python3.5/site-packages/getui/igetui/utils/igt_lang_utils.py'...
***   File "./lib/python3.5/site-packages/getui/igetui/utils/igt_lang_utils.py", line 6
    regex = ur'^(?:(?!0000)[0-9]{4}(?:(?:0[1-9]|1[0-2])(?:0[1-9]|1[0-9]|2[0-8])|(?:0[13-9]|1[0-2])(?:29|30)|(?:0[13578]|1[02])31)|(?:[0-9]{2}(?:0[48]|[2468][048]|[13579][26])|(?:0[48]|[2468][048]|[13579][26])00)0229)$'
                                                                                                                                                                                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/getui/payload'...
Listing './lib/python3.5/site-packages/getui/protobuf'...
Listing './lib/python3.5/site-packages/getui-4.0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
